--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,17 @@
-<div>
-  <button
-    mat-raised-button
-    [disabled]="messages.parsing"
-    (click)="messages.parse()"
-  >
-    Parse Messages
-  </button>
-  <span>{{ messages.lastError }}</span>
+<div class="root">
+  <app-game-selector></app-game-selector>
+  <div>
+    <button
+      mat-raised-button
+      [disabled]="messages.parsing$ | async"
+      (click)="parseMessages()"
+    >
+      Parse Messages
+    </button>
+    <span>{{ messages.lastError }}</span>
+  </div>
+  <div class="preview">
+    <pre>{{ messages.messages$ | async | json }}</pre>
+  </div>
+  <router-outlet />
 </div>
-
-<router-outlet />
