--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,14 @@
   grid-template-rows: auto auto 1fr auto;
   row-gap: 1em;
 
+  > .actions {
+    display: grid;
+    grid-auto-flow: column;
+    column-gap: 2em;
+    align-items: center;
+    justify-content: flex-start;
+  }
+
   > .preview {
     width: 100%;
     height: 100%;
