--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,22 +1,8 @@
 .root {
-  width: 100%;
-  height: 100%;
+  width: calc(100% - 2em);
+  height: calc(100% - 2em);
   overflow: hidden;
+  padding: 1em;
   display: grid;
-  grid-template-rows: auto auto 1fr auto;
-  row-gap: 1em;
-
-  > .actions {
-    display: grid;
-    grid-auto-flow: column;
-    column-gap: 2em;
-    align-items: center;
-    justify-content: flex-start;
-  }
-
-  > .preview {
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-  }
+  grid-template-rows: auto auto 1fr;
 }
