--- a/src/app/game-route/game-route.component.scss
+++ b/src/app/game-route/game-route.component.scss
@@ -1,5 +1,29 @@
+:host {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 .game {
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
+  display: grid;
+  grid-template-rows: auto auto auto 1fr;
+  row-gap: 0.5em;
+
+  > button {
+    justify-self: flex-start;
+  }
+
+  > .output {
+    display: block;
+    width: calc(100% - 20px - 1em);
+    height: calc(100% - 20px - 1em);
+    overflow: auto;
+    border: 1px solid black;
+    border-radius: 4px;
+    box-shadow: 2px 2px 2px grey;
+    padding: 0.5em;
+  }
 }
