--- a/src/app/game-route/game-route.component.scss
+++ b/src/app/game-route/game-route.component.scss
@@ -9,15 +9,22 @@
   height: 100%;
   overflow: hidden;
   display: grid;
-  grid-template-rows: auto auto auto 1fr;
+  grid-template-rows: auto 1fr;
   row-gap: 0.5em;
 
-  > button {
-    justify-self: flex-start;
+  > .info {
+    display: grid;
+    grid-auto-flow: row;
+    row-gap: 0.5em;
+
+    > button {
+      justify-self: flex-start;
+    }
   }
 
   > .output {
-    display: block;
+    font-family: "Courier New", Courier, monospace;
+    white-space: pre-line;
     width: calc(100% - 20px - 1em);
     height: calc(100% - 20px - 1em);
     overflow: auto;
