--- a/src/app/game-route/game-route.component.scss
+++ b/src/app/game-route/game-route.component.scss
@@ -9,7 +9,7 @@
   height: 100%;
   overflow: hidden;
   display: grid;
-  grid-template-rows: auto auto 1fr;
+  grid-template-rows: auto 1fr auto;
   row-gap: 0.5em;
 
   > .info {
