--- a/src/app/game-route/game-route.component.scss
+++ b/src/app/game-route/game-route.component.scss
@@ -25,6 +25,7 @@
   > input {
     font-size: 120%;
     padding: 0.5em;
+    background: #80ff80;
   }
 
   > .output {
@@ -37,5 +38,6 @@
     border-radius: 4px;
     box-shadow: 2px 2px 2px grey;
     padding: 0.5em;
+    background: #eeeeee;
   }
 }
