--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+div {
+  > div.output-verbatim {
+    white-space: pre;
+  }
+
+  > div.output-debug {
+    display: none;
+    font-style: italic;
+    color: #444444;
+    margin-left: 2em;
+  }
+
+  > div.output-error {
+    color: #800000;
+  }
+
+  &.debug > div.output-debug {
+    display: block;
+  }
+}
