--- a/src/app/welcome-route/welcome-route.component.html
+++ b/src/app/welcome-route/welcome-route.component.html
@@ -1,1 +1,5 @@
-<p>welcome-route works!</p>
+<div class="games">
+  <a mat-flat-button routerLink="ROAR">Der Schrei des Monsters (deutsch)</a>
+  <a mat-flat-button routerLink="REV">Die Rache des Monsters (deutsch)</a>
+  <a mat-flat-button routerLink="b5">The Babylon Project (english)</a>
+</div>
