Hopefully can start to debug games itselves.

--- a/src/app/welcome-route/welcome-route.component.html
+++ b/src/app/welcome-route/welcome-route.component.html
@@ -1,5 +1,10 @@
-<div class="games">
-  <a mat-flat-button *ngFor="let game of games" [routerLink]="game">{{
-    names[game]
-  }}</a>
+<div
+  class="welcome"
+  [ngStyle]="{ 'background-image': 'url(images/background.gif)' }"
+>
+  <div class="games">
+    <a mat-flat-button *ngFor="let game of games" [routerLink]="game">{{
+      names[game]
+    }}</a>
+  </div>
 </div>
