--- a/src/app/welcome-route/welcome-route.component.scss
+++ b/src/app/welcome-route/welcome-route.component.scss
@@ -1,6 +1,14 @@
-.games {
-  display: grid;
-  grid-auto-flow: row;
-  justify-content: flex-start;
-  row-gap: 0.5em;
+.welcome {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  > .games {
+    display: grid;
+    grid-auto-flow: row;
+    justify-content: flex-start;
+    row-gap: 0.5em;
+  }
 }
