Can have multiple exists in a single declaration.

--- a/src/app/welcome-route/welcome-route.component.html
+++ b/src/app/welcome-route/welcome-route.component.html
@@ -3,8 +3,12 @@
   [ngStyle]="{ 'background-image': 'url(images/background.gif)' }"
 >
   <div class="games">
-    <a mat-flat-button *ngFor="let game of games" [routerLink]="game">{{
-      names[game]
-    }}</a>
+    <a
+      mat-flat-button
+      *ngFor="let game of games"
+      [ngClass]="game"
+      [routerLink]="game"
+      >{{ names[game] }}</a
+    >
   </div>
 </div>
