--- a/src/app/welcome-route/welcome-route.component.scss
+++ b/src/app/welcome-route/welcome-route.component.scss
@@ -10,5 +10,11 @@
     grid-auto-flow: row;
     justify-content: flex-start;
     row-gap: 0.5em;
+
+    > .ROAR,
+    > .REV,
+    > .b5 {
+      opacity: 0.5;
+    }
   }
 }
