--- a/src/app/game-route/game-route.component.html
+++ b/src/app/game-route/game-route.component.html
@@ -25,7 +25,7 @@
       <button
         mat-raised-button
         color="warn"
-        (click)="game.save()"
+        (click)="save()"
         [disabled]="game.player.dead"
       >
         Speichern
@@ -42,7 +42,7 @@
   <div
     *ngIf="game.player"
     class="output"
-    #game
+    #output
     [ngClass]="{ debug: settings.debug }"
   ></div>
   <input
@@ -50,5 +50,6 @@
     value=""
     (change)="onEnter($event)"
     [disabled]="game.player.dead"
+    #input
   />
 </div>
