--- a/src/app/welcome-route/welcome-route.component.html
+++ b/src/app/welcome-route/welcome-route.component.html
@@ -11,4 +11,10 @@
       >{{ names[game] }}</a
     >
   </div>
+
+  <a
+    href="https://github.com/JMS-1/the-adventure/blob/main/README.md"
+    target="readme"
+    ><mat-icon>info</mat-icon></a
+  >
 </div>
