--- a/src/app/game-route/load-selector/load-selector.component.html
+++ b/src/app/game-route/load-selector/load-selector.component.html
@@ -2,15 +2,16 @@
 
 <div mat-dialog-content>
   @if(all.length){
-  <button
-    mat-raised-button
-    [mat-dialog-close]="state"
-    *ngFor="let state of all"
-  >
-    {{ state.when | date : "dd.MM.yyyy HH:mm:ss" }}
-  </button>
-  }@else{
-  <div>Du hast noch keine Spielstände gespeichert.</div>
+    @for (state of all; track state) {
+      <button
+        mat-raised-button
+        [mat-dialog-close]="state"
+        >
+        {{ state.when | date : "dd.MM.yyyy HH:mm:ss" }}
+      </button>
+    }
+    }@else{
+    <div>Du hast noch keine Spielstände gespeichert.</div>
   }
 </div>
 
